feat:fix swagger bug
